--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link rel="dns-prefetch" href="//gstatic.com">
     <link rel="dns-prefetch" href="//oss.maxcdn.com">
 
-    <link rel="shortcut icon" href="https://simpleshop.vn/storage/logo/favicon.png">
+    <link rel="shortcut icon" href="https://simpleshop.vn/storage/restaurant/logo/165605257462b55b5e58183.png">
     <script async>
         var themecolor = '#0062ff';
         var mapcolor = '#8080ff';
